# luma-sdk

./: CHANGELOG.md  CONTRIBUTING.md  README.md
go/: README.md  go.mod
go/luma/: client.go  client_test.go  contract_gen.go  slug.go  types.go
java/: README.md  settings.gradle.kts
java/runapi-luma/: build.gradle.kts
java/runapi-luma/src/main/java/ai/runapi/luma/: LumaClient.java
java/runapi-luma/src/main/java/ai/runapi/luma/resources/: LumaResource.java  ModifyVideoResource.java
java/runapi-luma/src/main/java/ai/runapi/luma/types/: CompletedModifyVideoResponse.java  LumaParamUtils.java  LumaValue.java  ModifyVideoModel.java  ModifyVideoParams.java  ModifyVideoResponse.java  Video.java  VideosTaskResponse.java
java/runapi-luma/src/test/java/ai/runapi/luma/: LumaClientTest.java  LumaLiveApiSmokeTest.java  LumaLocalApiSmokeTest.java
js/: README.md  package.json
js/skills/luma/: README.md  SKILL.md
js/src/: client.ts  contract_gen.ts  index.ts  types.ts
js/src/resources/: modify-video.ts
js/tests/unit/: video-modifications.test.ts
python/: README.md  pyproject.toml
python/src/runapi/luma/: __init__.py  client.py  contract_gen.py  types.py
python/src/runapi/luma/resources/: __init__.py  modify_video.py
python/tests/: test_client.py
ruby/: README.md  runapi-luma.gemspec
ruby/examples/: luma_modify_video.rb
ruby/lib/: runapi-luma.rb
ruby/lib/runapi/: luma.rb
ruby/lib/runapi/luma/: client.rb  contract_gen.rb  types.rb
ruby/lib/runapi/luma/resources/: modify_video.rb
ruby/spec/: spec_helper.rb
ruby/spec/runapi/luma/: client_spec.rb
ruby/spec/runapi/luma/resources/: modify_video_spec.rb
