[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runapi-luma"
version = "0.2.0"
description = "RunAPI Luma SDK for video modification workflows in JavaScript, Python, Ruby, Go, Java, and PHP"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "RunAPI", email = "contact@runapi.ai" }]
keywords = ["runapi", "runapi-ai", "luma", "api", "sdk", "typescript", "python", "ruby", "golang", "java", "maven", "gradle", "video-generation", "text-to-video", "video-api", "luma-ai-api"]
dependencies = ["runapi-core>=0.3.0"]

[project.urls]
Homepage = "https://runapi.ai/models/luma"
Documentation = "https://runapi.ai/docs#sdk-luma"
Source = "https://github.com/runapi-ai/luma-sdk"
Issues = "https://github.com/runapi-ai/luma-sdk/issues"
Changelog = "https://github.com/runapi-ai/luma-sdk/blob/main/CHANGELOG.md"
"Release Notes" = "https://github.com/runapi-ai/luma-sdk/releases/tag/python%2Fv0.2.0"

[tool.hatch.build.targets.wheel]
packages = ["src/runapi"]

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=8"]

[tool.runapi]
slug = "luma"
